# PERSONAL-AI-EMPLOYE-AGENT

./: .gitignore
BRONZIE/: README.md
BRONZIE/AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
BRONZIE/ai_employee/: .env.example  filesystem_watcher.py  orchestrator.py  pyproject.toml
Bronze tier/: CLAUDE.md  README.md  requirements.txt
Bronze tier/AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
Bronze tier/watchers/: filesystem_watcher.py
GOLD-TIER/: README.md
GOLD-TIER/AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
GOLD-TIER/ai_employee/: .env.example  .gitignore  audit_logger.py  base_watcher.py  error_handler.py  odoo_watcher.py  orchestrator.py  pyproject.toml  requirements.txt  scheduler.py  social_watcher.py  whatsapp_watcher.py
GOLD-TIER/ai_employee/mcp/: mcp_config.json
GOLD-TIER/ai_employee/mcp/email_mcp/: index.js  package.json
GOLD-TIER/ai_employee/mcp/odoo_mcp/: index.js  package-lock.json  package.json
GOLD-TIER/ai_employee/mcp/social_mcp/: index.js  package-lock.json  package.json
GOLD-TIER/ai_employee/mcp/twitter_mcp/: index.js  package-lock.json  package.json
Gold tier/: .env.example  .gitignore  CLAUDE.md  FACEBOOK_INSTAGRAM_SETUP.md  README.md  requirements.txt  test_odoo.py
Gold tier/AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
Gold tier/odoo/: .env.example  ODOO_SETUP.md  docker-compose.yml  odoo.conf
Gold tier/watchers/: audit_logger.py  base_watcher.py  facebook_watcher.py  gmail_watcher.py  linkedin_watcher.py  odoo_connector.py  orchestrator.py  twitter_watcher.py  whatsapp_watcher.py
SILVER-TIER/: README.md
SILVER-TIER/AI_Employee_Vault/: .gitignore  Dashboard.md  (+1 more)
SILVER-TIER/ai_employee/: .env.example  gmail_watcher.py  linkedin_watcher.py  pyproject.toml  scheduler.py
SILVER-TIER/ai_employee/mcp/: mcp_config.json
SILVER-TIER/ai_employee/mcp/email_mcp/: package-lock.json
Silver tier/: .env.example  CLAUDE.md  GMAIL_SETUP.md  README.md  requirements.txt
(+105 files in other folders)
